# tutara

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  grcov.yml
tutara-cli/: Cargo.toml
tutara-cli/src/: main.rs
tutara-compiler-llvm/: Cargo.toml
tutara-compiler-llvm/src/: compiler.rs  evaluator.rs  lib.rs  operation.rs
tutara-compiler-llvm/src/compilation/: choice.rs  common.rs  expressions.rs  functions.rs  loops.rs  mod.rs  operations.rs  variables.rs
tutara-compiler-llvm/src/compiler/: compiler.rs  evaluator.rs  mod.rs  scope.rs
tutara-compiler-llvm/tests/: mod.rs
tutara-compiler-llvm/tests/integration/: compiler_tests.rs  mod.rs
tutara-compiler-llvm/tests/scripts/: assignment_operations.ttr  break.ttr  if_else.ttr  logic_function.ttr
tutara-compiler-llvm/tests/unit/: compiler_tests.rs
tutara-http/: Cargo.toml
tutara-http/src/: main.rs
tutara-interpreter/: Cargo.toml
tutara-interpreter/benches/: benchie.ttr  interpreter.rs
tutara-interpreter/src/: analyzer.rs  error.rs  lib.rs  parser.rs  tokenizer.rs
tutara-interpreter/src/analyzer/: analyzer.rs  mod.rs
tutara-interpreter/src/ast/: expression.rs  mod.rs
tutara-interpreter/src/compiler/: compiler.rs  evaluator.rs
tutara-interpreter/src/parser/: expression.rs  mod.rs  parser.rs  statement.rs
tutara-interpreter/src/parsing/: choice.rs  common.rs  declaration.rs  expressions.rs  functions.rs  loops.rs  mod.rs
tutara-interpreter/src/tokenizer/: literal.rs  mod.rs  result.rs  token.rs  token_result.rs  token_type.rs  tokenize.rs  tokenizer.rs
tutara-interpreter/tests/: main.rs  parser_tests.rs  tokenizer.rs  tokenizer_test.rs  tokenizer_tests.rs
tutara-interpreter/tests/integration/: analyzer_tests.rs  mod.rs  parser_tests.rs
tutara-interpreter/tests/scripts/assignment/: assignment.analyzed_statements.json  assignment.statements.json  assignment.tokens.json  assignment.ttr
tutara-interpreter/tests/scripts/choice/: choice.analyzed_statements.json  choice.statements.json  choice.tokens.json  choice.ttr
tutara-interpreter/tests/scripts/functions/: functions.analyzed_statements.json  functions.statements.json  functions.tokens.json  functions.ttr
tutara-interpreter/tests/scripts/logic/: logic.analyzed_statements.json  logic.statements.json  logic.tokens.json  logic.ttr
tutara-interpreter/tests/scripts/loops/: loops.analyzed_statements.json  loops.statements.json  loops.tokens.json  loops.ttr
tutara-interpreter/tests/unit/: mod.rs  parser_tests.rs  tokenizer_tests.rs
tutara-wasm/: Cargo.toml  token-set.js
tutara-wasm/src/: lib.rs
(+45 files in other folders)
