[package]
name = "tutara-cli"
version = "0.0.0"
authors = ["Niels van Velzen <git@ndat.nl>", "Marnix Wieffering <git@marnixwieffering.dev>"]
edition = "2018"
default-run = "tutara-cli"

[dependencies]
tutara-interpreter = { path = "../tutara-interpreter" }
tutara-compiler-llvm = { path = "../tutara-compiler-llvm" }
clap = "4.0.10"
termcolor = "1.1"
serde_json = "1.0"
