[package]
name = "tutara-compiler-llvm"
version = "0.0.0"
authors = ["Niels van Velzen <git@ndat.nl>", "Marnix Wieffering <git@marnixwieffering.dev>"]
edition = "2018"

[dependencies]
tutara-interpreter = { path = "../tutara-interpreter" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
