[package]
name = "tutara-http"
version = "0.0.0"
authors = ["Niels van Velzen <git@ndat.nl>", "Marnix Wieffering <git@marnixwieffering.dev>"]
edition = "2018"

[dependencies]
tutara-interpreter = { path = "../tutara-interpreter" }
tutara-compiler-llvm = { path = "../tutara-compiler-llvm" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "io-util"] }
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
